@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "version": "1.0.6.2",
+    "version": "1.0.7",
     "name": "Posso Ler?",
     "description": "Tenha acesso a notícias ilimitadas de forma gratuita e segura",
     "author": "Thomaz Ferreira Neves dos Santos",
@@ -20,6 +20,6 @@
     "content_scripts": [{
         "js":["js/axios.js", "js/snackbar.js", "js/script.js"],
         "css":["css/snackbar.css", "css/styleSnackBar.css"],
-    "matches":["https://*.folha.uol.com.br/*", "https://*.estadao.com.br/*", "https://*.oglobo.globo.com/*", "https://*.gazetadopovo.com.br/*", "https://*.super.abril.com.br/*", "https://*.quatrorodas.abril.com.br/*", "https://*.veja.abril.com.br/*", "https://*.vejasp.abril.com.br/*", "https://*.respondeai.com.br/*", "https://*.exame.com/*", "https://*.guiadoestudante.abril.com.br/*", "https://*.epoca.globo.com/*", "https://*.revistagalileu.globo.com/*"]
+    "matches":["https://*.folha.uol.com.br/*", "https://*.estadao.com.br/*", "https://*.oglobo.globo.com/*", "https://*.gazetadopovo.com.br/*", "https://*.super.abril.com.br/*", "https://*.quatrorodas.abril.com.br/*", "https://*.veja.abril.com.br/*", "https://*.vejasp.abril.com.br/*", "https://*.respondeai.com.br/*", "https://*.exame.com/*", "https://*.guiadoestudante.abril.com.br/*", "https://*.epoca.globo.com/*", "https://*.revistagalileu.globo.com/*", "https://*.epocanegocios.globo.com/*", "https://*.revistamarieclaire.globo.com/*", "https://*.revistagloborural.globo.com/*", "https://*.autoesporte.globo.com/*", "https://*.revistapegn.globo.com/*"]
     }]
 }
